# wikibase-backend

./: .env.example  .gitignore  LICENSE-DETAILS.md  OPENCODE-INSTRUCTIONS.md  README.md  STATISTICS.md  docker-compose.yml  pyproject.toml  run-docker-build.sh  run-stats.sh  run-vulture.sh  vulture_whitelist.txt  word-counts.txt
ARCHITECTURE/: ARCHITECTURE-CHANGELOG.md  ARCHITECTURE.md  CACHING-STRATEGY.md  CHANGE-DETECTION-RDF-GENERATION.md  ENTITY-EXAMPLE-Q42.md  ENTITY-EXAMPLE-Q45648994.md  ENTITY-MODEL.md  INTERNAL-REPRESENTATION.md  JSON-RDF-CONVERTER.md  MEDIAWIKI-INDEPENDENT-CHANGE-DETECTION.md  POST-PROCESSING-VALIDATION.md  RDF-DIFF-STRATEGY.md  S3-REVISION-SCHEMA-CHANGELOG.md  S3-REVISION-SCHEMA-EVOLUTION.md  SCHEMA-CHANGELOG.md  SCHEMA-CHANGES.md  STORAGE-ARCHITECTURE.md  WEEKLY-RDF-DUMP-GENERATOR.md
ENTITY-EXAMPLES/: Q42.json
EXISTING-COMPONENTS/: ENTITY-API-STREAMING-INTEGRATION.md
WIKIDATA/: MIGRATION-STRATEGY.md  PREFIX-EXAMPLES.md  PREFIXES.md  RDF-PROPERTIES.md  README.md
disabled_tests/: test_entity_to_ttl.py
doc/ARCHITECTURE/: ARCHITECTURE-CHANGELOG.md  ARCHITECTURE.md  BULK-OPERATIONS.md  CACHING-STRATEGY.md  CHANGE-NOTIFICATION.md  (+18 more)
scripts/: download_missing_entity_metadata.py  download_properties_sparql.py  download_property_metadata.py  download_wikidata_entity.py
src/: Dockerfile  PLAN.md
test_data/: README.md
tests/: Dockerfile  conftest.py  integration_test_live.py  test_app.py  test_datatype_normalization.py  test_entity_redirects.py  test_integration.py  test_parsers.py  test_raw_endpoint.py  test_vitess_client.py
(+370 files in other folders)
