[project]
name = "wikibase-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nizo Priskorn",email = "68460690+dpriskorn@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi (>=0.127.1,<0.128.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "boto3 (>=1.42.17,<2.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
     "rapidhash (>=0.1.0,<0.2.0)",
     "rdflib (>=7.5.0,<8.0.0)"
 ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "httpie (>=3.2.4,<4.0.0)",
    "vulture (>=2.14,<3.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.vulture]
paths = ["src"]
exclude = ["tests"]
ignore_names = ["arbitrary_types_allowed"]
